fix: css about pills overflow in mobile

--- a/src/components/pills/pills.css
+++ b/src/components/pills/pills.css
@@ -1,6 +1,11 @@
 .pills {
-  @apply flex mb-10;
+  @apply flex mb-10 w-full overflow-x-scroll;
 }
+
+.pills__inner {
+  @apply flex w-full;
+}
+
 .pill {
   @apply border-2 p-2 rounded-full cursor-pointer;
 }
